src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_statements_tests__invalid_variable_data_type_error_recovery.snap
---
source: src/parser/tests/parse_errors/parse_error_statements_tests.rs
expression: diagnostics
---
error[E006]: Missing expected Token `:` or `,`
  ┌─ <internal>:4:18
  │
4 │                 a DINT : ;
  │                  ^ Missing expected Token `:` or `,`

error[E007]: Unexpected token: expected DataTypeDefinition but found `;`
  ┌─ <internal>:4:26
  │
4 │                 a DINT : ;
  │                          ^ Unexpected token: expected DataTypeDefinition but found `;`

error[E006]: Missing expected Token `:`
  ┌─ <internal>:6:21
  │
6 │                 h , , : INT;
  │                     ^ Missing expected Token `:`

error[E007]: Unexpected token: expected DataTypeDefinition but found `,`
  ┌─ <internal>:6:21
  │
6 │                 h , , : INT;
  │                     ^ Unexpected token: expected DataTypeDefinition but found `,`

error[E007]: Unexpected token: expected `;` but found ', : INT'
  ┌─ <internal>:6:21
  │
6 │                 h , , : INT;
  │                     ^^^^^^^ Unexpected token: expected `;` but found ', : INT'

error[E007]: Unexpected token: expected DataTypeDefinition but found `;`
  ┌─ <internal>:7:27
  │
7 │                 f , INT : ;
  │                           ^ Unexpected token: expected DataTypeDefinition but found `;`
